<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/size_4"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/subCategoryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">




            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/date"
                    android:textColor="@color/black_text"
                    android:textSize="10sp" />




            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:visibility="invisible"
                android:background="@color/table_header_stroke_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvLrNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/lr_no_dot"
                    android:textColor="@color/black_text"
                    android:textSize="10sp" />




            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:visibility="invisible"
                android:background="@color/table_header_stroke_color" />




            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvTransport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/transport"
                    android:textColor="@color/black_text"
                    android:textSize="10sp" />



            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:visibility="invisible"
                android:background="@color/table_header_stroke_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:id="@+id/tvAmount"
                    android:singleLine="true"
                    android:text="@string/amount"
                    android:textColor="@color/black_text"
                    android:textSize="10sp" />




            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:visibility="invisible"
                android:background="@color/table_header_stroke_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvInvoice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:drawablePadding="2dp"
                    android:drawableEnd="@drawable/pdf_small"
                    android:text="@string/invoice"
                    android:textColor="@color/black_text"
                    android:textSize="10sp" />




            </LinearLayout>


        </LinearLayout>


        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/table_header_stroke_color"
            app:layout_constraintTop_toBottomOf="@+id/subCategoryLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>